Fix alignment

--- a/web-mvn/src/main/resources/toserve/css/tpuf.css
+++ b/web-mvn/src/main/resources/toserve/css/tpuf.css
@@ -136,6 +136,6 @@ table {
     font-weight: bold;
 }
 
-.gnlInfoVal {
+td.gnlInfoVal {
     vertical-align: bottom;
 }
